--- a/main.ipynb
+++ b/main.ipynb
@@ -98,11 +98,136 @@
     "\n",
     "Entonces λ_1 y λ_2,uno de los eigenvalores es muy grande y el otro es muy pequeño. Por lo tanto que la intensidad de la imagen cambia mucho solo en una dirección, mientras que en la dirección perpendicular casi no cambia. Esa situación corresponde a un borde porque cuando cruzas el borde la intensidad varía bastante, pero si te mueves siguiendo el borde casi no hay diferencia.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c1a4a09",
+   "metadata": {},
+   "source": [
+    "## Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d7f3c1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "imagen1 = cv2.imread('ironman.jpeg', cv2.IMREAD_GRAYSCALE)\n",
+    "imagen2 = cv2.imread('ironman2.jpeg', cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "\n",
+    "sift = cv2.SIFT_create()\n",
+    "puntos_clave1_sift, descriptores1_sift = sift.detectAndCompute(imagen1, None)\n",
+    "puntos_clave2_sift, descriptores2_sift = sift.detectAndCompute(imagen2, None)\n",
+    "\n",
+    "orb = cv2.ORB_create()\n",
+    "puntos_clave1_orb, descriptores1_orb = orb.detectAndCompute(imagen1, None)\n",
+    "puntos_clave2_orb, descriptores2_orb = orb.detectAndCompute(imagen2, None)\n",
+    "\n",
+    "\n",
+    "emparejador_sift = cv2.BFMatcher(cv2.NORM_L2, crossCheck=False)\n",
+    "coincidencias_sift = emparejador_sift.knnMatch(descriptores1_sift, descriptores2_sift, k=2)\n",
+    "\n",
+    "\n",
+    "emparejador_orb = cv2.BFMatcher(cv2.NORM_HAMMING, crossCheck=False)\n",
+    "coincidencias_orb = emparejador_orb.knnMatch(descriptores1_orb, descriptores2_orb, k=2)\n",
+    "\n",
+    "buenas_coincidencias_sift = []\n",
+    "for mejor, segundo_mejor in coincidencias_sift:\n",
+    "    if mejor.distance < 0.75 * segundo_mejor.distance:\n",
+    "        buenas_coincidencias_sift.append(mejor)\n",
+    "\n",
+    "\n",
+    "buenas_coincidencias_orb = []\n",
+    "for par_coincidencia in coincidencias_orb:\n",
+    "    if len(par_coincidencia) == 2:\n",
+    "        mejor, segundo_mejor = par_coincidencia\n",
+    "        if mejor.distance < 0.75 * segundo_mejor.distance:\n",
+    "            buenas_coincidencias_orb.append(mejor)\n",
+    "\n",
+    "def dibujar_lineas_correspondencia(img1, puntos_clave1, img2, puntos_clave2, buenas_coincidencias):\n",
+    "\n",
+    "    altura1, ancho1 = img1.shape\n",
+    "    altura2, ancho2 = img2.shape\n",
+    "    \n",
+    "    altura_salida = max(altura1, altura2)\n",
+    "    ancho_salida = ancho1 + ancho2\n",
+    "    \n",
+    "    imagen_salida = np.zeros((altura_salida, ancho_salida, 3), dtype=np.uint8)\n",
+    "    \n",
+    "    imagen1_bgr = cv2.cvtColor(img1, cv2.COLOR_GRAY2BGR)\n",
+    "    imagen2_bgr = cv2.cvtColor(img2, cv2.COLOR_GRAY2BGR)\n",
+    "    \n",
+    "    imagen_salida[0:altura1, 0:ancho1] = imagen1_bgr\n",
+    "    \n",
+    "    imagen_salida[0:altura2, ancho1:ancho1+ancho2] = imagen2_bgr\n",
+    "    \n",
+    "    for coincidencia in buenas_coincidencias:\n",
+    "        punto1 = puntos_clave1[coincidencia.queryIdx].pt\n",
+    "        x1, y1 = int(punto1[0]), int(punto1[1])\n",
+    "        \n",
+    "        punto2 = puntos_clave2[coincidencia.trainIdx].pt\n",
+    "        x2, y2 = int(punto2[0]) + ancho1, int(punto2[1])\n",
+    "        \n",
+    "        color = tuple(np.random.randint(0, 255, 3).tolist())\n",
+    "        \n",
+    "        cv2.circle(imagen_salida, (x1, y1), 5, color, 2)\n",
+    "        \n",
+    "        cv2.circle(imagen_salida, (x2, y2), 5, color, 2)\n",
+    "        \n",
+    "        cv2.line(imagen_salida, (x1, y1), (x2, y2), color, 1)\n",
+    "    \n",
+    "    return imagen_salida\n",
+    "\n",
+    "\n",
+    "imagen_correspondencias_sift = dibujar_lineas_correspondencia(\n",
+    "    imagen1, puntos_clave1_sift, \n",
+    "    imagen2, puntos_clave2_sift, \n",
+    "    buenas_coincidencias_sift, \n",
+    ")\n",
+    "\n",
+    "imagen_correspondencias_orb = dibujar_lineas_correspondencia(\n",
+    "    imagen1, puntos_clave1_orb, \n",
+    "    imagen2, puntos_clave2_orb, \n",
+    "    buenas_coincidencias_orb, \n",
+    ")\n",
+    "\n",
+    "\n",
+    "cv2.imshow('SIFT', imagen_correspondencias_sift)\n",
+    "cv2.imshow('ORB', imagen_correspondencias_orb)\n",
+    "\n",
+    "cv2.imwrite('sift.jpg', imagen_correspondencias_sift)\n",
+    "cv2.imwrite('orb.jpg', imagen_correspondencias_orb)\n",
+    "\n",
+    "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
