--- a/main.ipynb
+++ b/main.ipynb
@@ -209,11 +209,211 @@
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93af0e68",
+   "metadata": {},
+   "source": [
+    "## Task 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0288ac4d",
+   "metadata": {},
+   "source": [
+    "1. Usando librerías como time o o timeit para medir tiempo por separado, mida:\n",
+    "\n",
+    "a. Tiempo promedio de Detección + Descripción (en milisegundos)\n",
+    "\n",
+    "b. Tiempo promedio de Matching (en milisegundos)\n",
+    "\n",
+    "c. Asegurese de realizar esto apra ambos algoritmos de la parte 2 (SIFT y ORB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9000a88",
+   "metadata": {},
+   "source": [
+    "2. Cree una tabla en su reporte con las siguientes columnas:\n",
+    "\n",
+    "a. Algoritmo\n",
+    "\n",
+    "b. Tiempo total (en milisegundos)\n",
+    "\n",
+    "c. Número de Keypoints detectados (Imagen A / Imagen B)\n",
+    "\n",
+    "d. Número de Matches “Buenos” (post-Ratio Test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84a4839e",
+   "metadata": {},
+   "source": [
+    "3. Finalmente, realice un análisis crítico, para ello responda\n",
+    "\n",
+    "a. ¿Cuál algoritmo elegiría para el Producto A (Drone de Carreras) y por qué? Base su\n",
+    "respuesta en los milisegundos que mediste y la tasa de refresco requerida (60 FPS ≈ 16ms\n",
+    "de presupuesto total).\n",
+    "\n",
+    "b. ¿Cuál algoritmo elegirías para el Producto B (Inspección) y por qué? Analice la calidad\n",
+    "visual de los matches en los cambios de escala y rotación que probaste. ¿Falló ORB en\n",
+    "algún caso donde SIFT tuvo éxito?\n",
+    "\n",
+    "c. ¿Las conclusiones que estamos alcanzando son justas y generalizables? ¿Por qué? ¿Qué\n",
+    "deberíamos considerar en futuras iteraciones?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "03154d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados en promedios\n",
+      "SIFT: Det+Desc=10.09 ms | Matching=0.11 ms | Total=10.20 ms | Keypoints(A/B)=(129/107) | Buenos matches=8\n",
+      "ORB: Det+Desc=1.94 ms | Matching=0.18 ms | Total=2.11 ms | Keypoints(A/B)=(206/328) | Buenos matches=4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "imagen1 = cv2.imread('ironman.jpeg', cv2.IMREAD_GRAYSCALE)\n",
+    "imagen2 = cv2.imread('ironman2.jpeg', cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "if imagen1 is None or imagen2 is None:\n",
+    "    raise FileNotFoundError(\"Error al cargar las imágenes\")\n",
+    "\n",
+    "RATIO = 0.75\n",
+    "\n",
+    "def ratio_test(knn_matches, ratio=0.75):\n",
+    "    buenas = []\n",
+    "    for par in knn_matches:\n",
+    "        if len(par) == 2:\n",
+    "            m, n = par\n",
+    "            if m.distance < ratio * n.distance:\n",
+    "                buenas.append(m)\n",
+    "    return buenas\n",
+    "\n",
+    "def dibujar_lineas_correspondencia(img1, puntos_clave1, img2, puntos_clave2, buenas_coincidencias):\n",
+    "    altura1, ancho1 = img1.shape\n",
+    "    altura2, ancho2 = img2.shape\n",
+    "    \n",
+    "    altura_salida = max(altura1, altura2)\n",
+    "    ancho_salida = ancho1 + ancho2\n",
+    "    \n",
+    "    imagen_salida = np.zeros((altura_salida, ancho_salida, 3), dtype=np.uint8)\n",
+    "    \n",
+    "    imagen1_bgr = cv2.cvtColor(img1, cv2.COLOR_GRAY2BGR)\n",
+    "    imagen2_bgr = cv2.cvtColor(img2, cv2.COLOR_GRAY2BGR)\n",
+    "    \n",
+    "    imagen_salida[0:altura1, 0:ancho1] = imagen1_bgr\n",
+    "    imagen_salida[0:altura2, ancho1:ancho1+ancho2] = imagen2_bgr\n",
+    "    \n",
+    "    for coincidencia in buenas_coincidencias:\n",
+    "        punto1 = puntos_clave1[coincidencia.queryIdx].pt\n",
+    "        x1, y1 = int(punto1[0]), int(punto1[1])\n",
+    "        \n",
+    "        punto2 = puntos_clave2[coincidencia.trainIdx].pt\n",
+    "        x2, y2 = int(punto2[0]) + ancho1, int(punto2[1])\n",
+    "        \n",
+    "        color = tuple(np.random.randint(0, 255, 3).tolist())\n",
+    "        cv2.circle(imagen_salida, (x1, y1), 5, color, 2)\n",
+    "        cv2.circle(imagen_salida, (x2, y2), 5, color, 2)\n",
+    "        cv2.line(imagen_salida, (x1, y1), (x2, y2), color, 1)\n",
+    "    \n",
+    "    return imagen_salida\n",
+    "\n",
+    "N_RUNS = 20  \n",
+    "\n",
+    "def medir_sift_orb(nombre, detector, matcher, img1, img2, n_runs=20, ratio=0.75):\n",
+    "    tiempos_det_desc = []\n",
+    "    tiempos_match = []\n",
+    "\n",
+    "    kp1_final = kp2_final = None\n",
+    "    good_final = []\n",
+    "\n",
+    "    for _ in range(n_runs):\n",
+    "        t0 = time.perf_counter()\n",
+    "        kp1, des1 = detector.detectAndCompute(img1, None)\n",
+    "        kp2, des2 = detector.detectAndCompute(img2, None)\n",
+    "        t1 = time.perf_counter()\n",
+    "        tiempos_det_desc.append((t1 - t0) * 1000)  \n",
+    "\n",
+    "        if des1 is None or des2 is None or len(des1) == 0 or len(des2) == 0:\n",
+    "            tiempos_match.append(0.0)\n",
+    "            kp1_final, kp2_final, good_final = kp1, kp2, []\n",
+    "            continue\n",
+    "\n",
+    "        t2 = time.perf_counter()\n",
+    "        knn = matcher.knnMatch(des1, des2, k=2)\n",
+    "        good = ratio_test(knn, ratio=ratio)\n",
+    "        t3 = time.perf_counter()\n",
+    "        tiempos_match.append((t3 - t2) * 1000)  \n",
+    "\n",
+    "        kp1_final, kp2_final, good_final = kp1, kp2, good\n",
+    "\n",
+    "    prom_det_desc = sum(tiempos_det_desc) / len(tiempos_det_desc)\n",
+    "    prom_match = sum(tiempos_match) / len(tiempos_match)\n",
+    "    prom_total = prom_det_desc + prom_match\n",
+    "\n",
+    "    return {\n",
+    "        \"Algoritmo\": nombre,\n",
+    "        \"Det+Desc (ms)\": prom_det_desc,\n",
+    "        \"Matching (ms)\": prom_match,\n",
+    "        \"Total (ms)\": prom_total,\n",
+    "        \"Keypoints A\": 0 if kp1_final is None else len(kp1_final),\n",
+    "        \"Keypoints B\": 0 if kp2_final is None else len(kp2_final),\n",
+    "        \"Buenos matches\": len(good_final),\n",
+    "        \"kp1\": kp1_final,\n",
+    "        \"kp2\": kp2_final,\n",
+    "        \"good\": good_final\n",
+    "    }\n",
+    "\n",
+    "sift = cv2.SIFT_create()\n",
+    "orb = cv2.ORB_create()\n",
+    "\n",
+    "bf_sift = cv2.BFMatcher(cv2.NORM_L2, crossCheck=False)\n",
+    "bf_orb  = cv2.BFMatcher(cv2.NORM_HAMMING, crossCheck=False)\n",
+    "\n",
+    "res_sift = medir_sift_orb(\"SIFT\", sift, bf_sift, imagen1, imagen2, n_runs=N_RUNS, ratio=RATIO)\n",
+    "res_orb  = medir_sift_orb(\"ORB\",  orb,  bf_orb,  imagen1, imagen2, n_runs=N_RUNS, ratio=RATIO)\n",
+    "\n",
+    "print(\"Resultados en promedios\")\n",
+    "for r in [res_sift, res_orb]:\n",
+    "    print(\n",
+    "        f\"{r['Algoritmo']}: Det+Desc={r['Det+Desc (ms)']:.2f} ms | \"\n",
+    "        f\"Matching={r['Matching (ms)']:.2f} ms | Total={r['Total (ms)']:.2f} ms | \"\n",
+    "        f\"Keypoints(A/B)=({r['Keypoints A']}/{r['Keypoints B']}) | \"\n",
+    "        f\"Buenos matches={r['Buenos matches']}\"\n",
+    "    )\n",
+    "\n",
+    "img_sift = dibujar_lineas_correspondencia(imagen1, res_sift[\"kp1\"], imagen2, res_sift[\"kp2\"], res_sift[\"good\"])\n",
+    "img_orb  = dibujar_lineas_correspondencia(imagen1, res_orb[\"kp1\"],  imagen2, res_orb[\"kp2\"],  res_orb[\"good\"])\n",
+    "\n",
+    "cv2.imwrite(\"sift_task3.jpg\", img_sift)\n",
+    "cv2.imwrite(\"orb_task3.jpg\", img_orb)\n",
+    "\n",
+    "cv2.imshow(\"SIFT - Task 3\", img_sift)\n",
+    "cv2.imshow(\"ORB - Task 3\", img_orb)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
