--- a/main.ipynb
+++ b/main.ipynb
@@ -250,6 +250,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54e5b9da",
+   "metadata": {},
+   "source": [
+    "| Algoritmo | Tiempo total (ms) | Keypoints (Imagen A / Imagen B) | Matches \"Buenos\" |\n",
+    "|----------|------------------|---------------------------------|------------------|\n",
+    "| SIFT     | 16.29            | 129 / 107                       | 8                |\n",
+    "| ORB      | 2.08             | 206 / 328                       | 4                |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84a4839e",
    "metadata": {},
    "source": [
@@ -259,12 +270,19 @@
     "respuesta en los milisegundos que mediste y la tasa de refresco requerida (60 FPS ≈ 16ms\n",
     "de presupuesto total).\n",
     "\n",
+    "**R//** Elegiría ORB porque es mucho más rápido por que ORB tarda 2.08 ms, muy por debajo del límite de 16 ms para 60 FPS, mientras que SIFT tarda 16.29 ms, quedando justo en el límite y no siendo seguro para tiempo real.\n",
+    "\n",
     "b. ¿Cuál algoritmo elegirías para el Producto B (Inspección) y por qué? Analice la calidad\n",
     "visual de los matches en los cambios de escala y rotación que probaste. ¿Falló ORB en\n",
     "algún caso donde SIFT tuvo éxito?\n",
     "\n",
+    "**R//** Elegiría SIFT porque sus matches son más confiables, aunque es más lento, maneja mejor cambios de escala y rotación que ORB, lo cual es clave para inspección precisa.\n",
+    "\n",
     "c. ¿Las conclusiones que estamos alcanzando son justas y generalizables? ¿Por qué? ¿Qué\n",
-    "deberíamos considerar en futuras iteraciones?"
+    "deberíamos considerar en futuras iteraciones?\n",
+    "\n",
+    "**R//** No del todo, por que solo se probaron dos imágenes de un mismo objeto.\n",
+    "Para conclusiones más generales se necesitarían más escenas/imágenes y condiciones distintas."
    ]
   },
   {
