--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,8 @@
    "id": "9f5159eb",
    "metadata": {},
    "source": [
-    "https://github.com/BrandonReyes0609/VP-Lab3.git"
+    "##### CC3182 – Visión por Computadora\n",
+    "# Laboratorio 3"
    ]
   },
   {
@@ -13,7 +14,7 @@
    "id": "16592ba8",
    "metadata": {},
    "source": [
-    "https://github.com/BrandonReyes0609/VP-Lab3.git"
+    "Link al repositorio: https://github.com/BrandonReyes0609/VP-Lab3.git"
    ]
   },
   {
@@ -21,11 +22,14 @@
    "id": "340afa78",
    "metadata": {},
    "source": [
-    "Laboratorio 3 Visión por computadora\n",
+    "Integrantes:\n",
     "\n",
     " - Nancy Mazariegos – 22513 \n",
     " - Brandon Reyes – 22992 \n",
-    " - Santiago Pereira – 22318 "
+    " - Santiago Pereira – 22318 \n",
+    "\n",
+    "\n",
+    " -----"
    ]
   },
   {
@@ -33,7 +37,7 @@
    "id": "69478603",
    "metadata": {},
    "source": [
-    "# Task 1"
+    "## Task 1"
    ]
   },
   {
@@ -41,7 +45,7 @@
    "id": "4f689005",
    "metadata": {},
    "source": [
-    "## parte 1"
+    "### Parte 1"
    ]
   },
   {
@@ -62,7 +66,7 @@
    "id": "740e9b2b",
    "metadata": {},
    "source": [
-    "## parte 2"
+    "### Parte 2"
    ]
   },
   {
@@ -83,20 +87,24 @@
    "id": "527c6df6",
    "metadata": {},
    "source": [
-    "## Parte 3\n",
-    "### Matriz M\n",
+    "### Parte 3\n",
+    "#### Matriz M\n",
     "- Para λ_1 = 123.1 y  λ_2= 111.9\n",
     "    -  En este caso los valores son grandes\n",
     "    - Magnitud similar\n",
     "Entonces λ_1 y λ_2 son comprables y grante por lo cual la intensidad de la imagen cambia fuerte en dos direc ciones distintas alrededor del piel. Por lo cual es una esquina \n",
     "\n",
     "\n",
-    "### Para matriz M'\n",
+    "#### Para matriz M'\n",
     "- Para λ_1 = 200.5 y  λ_2= 0.5 \n",
     "    -  λ_1 es muy grande \n",
     "    - λ_2 es muy pequeño cercano a cero\n",
     "\n",
-    "Entonces λ_1 y λ_2,uno de los eigenvalores es muy grande y el otro es muy pequeño. Por lo tanto que la intensidad de la imagen cambia mucho solo en una dirección, mientras que en la dirección perpendicular casi no cambia. Esa situación corresponde a un borde porque cuando cruzas el borde la intensidad varía bastante, pero si te mueves siguiendo el borde casi no hay diferencia.\n"
+    "Entonces λ_1 y λ_2,uno de los eigenvalores es muy grande y el otro es muy pequeño. Por lo tanto que la intensidad de la imagen cambia mucho solo en una dirección, mientras que en la dirección perpendicular casi no cambia. Esa situación corresponde a un borde porque cuando cruzas el borde la intensidad varía bastante, pero si te mueves siguiendo el borde casi no hay diferencia.\n",
+    "\n",
+    "\n",
+    "\n",
+    "-----\n"
    ]
   },
   {
@@ -212,6 +220,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54a41f84",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "93af0e68",
    "metadata": {},
    "source": [
@@ -246,17 +262,6 @@
     "c. Número de Keypoints detectados (Imagen A / Imagen B)\n",
     "\n",
     "d. Número de Matches “Buenos” (post-Ratio Test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54e5b9da",
-   "metadata": {},
-   "source": [
-    "| Algoritmo | Tiempo total (ms) | Keypoints (Imagen A / Imagen B) | Matches \"Buenos\" |\n",
-    "|----------|------------------|---------------------------------|------------------|\n",
-    "| SIFT     | 16.29            | 129 / 107                       | 8                |\n",
-    "| ORB      | 2.08             | 206 / 328                       | 4                |\n"
    ]
   },
   {
@@ -426,6 +431,14 @@
     "cv2.imshow(\"ORB - Task 3\", img_orb)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52652931",
+   "metadata": {},
+   "source": [
+    "-----"
    ]
   }
  ],
